# solarpy

./: pyproject.toml
.github/workflows/: test.yml
docs/source/: conf.py  documentation.rst  index.md  installation.md
src/solarpy/: __init__.py
src/solarpy/horizon/: __init__.py  horizon_mines.py
src/solarpy/instrument/: shadowband.py
src/solarpy/iotools/: __init__.py  read_t16.py
src/solarpy/plotting/: __init__.py  colors.py  intraday_heatmap.py  map.py  shading_heatmap.py  style.py
src/solarpy/quality/: __init__.py  limits.py
tests/: test_instrument.py
tests/horizon/: test_horizon_mines.py
tests/iotools/: test_read_t16.py
tests/plotting/: test_shading_heatmap.py
tests/quality/: test_limits.py
