[build-system]
requires = [
    "setuptools>61",  # start of support for pyproject.toml/PEP 621. https://setuptools.pypa.io/en/stable/history.html#v61-0-0
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]  # set version dynamically

[tool.setuptools]
include-package-data = false  # necessary for exclude to work

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "solarpy"
authors = [
    {name = "Adam R. Jensen"},
]
description = "A Python package for modeling solar radiation and analyzing solar resource data."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["solar energy", "solar irradiance", "solar radiation"]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "pvlib",
    "scipy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "packaging"]
doc = [
    "sphinx==9.1.0",
    "myst-nb==1.4.0",
    "sphinx-book-theme==1.1.4",
    "sphinx-copybutton==0.5.2",
    "pvlib==0.14.0",
    "pandas==2.3.3",
]
all = ["solarpy[test,doc]"]

[project.urls]
# Documentation = "https://solarpy.readthedocs.io"
Issues = "https://github.com/assessingsolar/solarpy/issues"
Repository = "https://github.com/assessingsolar/solarpy.git"
Changelog = "https://github.com/assessingsolar/solarpy/blob/main/docs/source/whatsnew.md"

[tool.pytest.ini_options]
addopts = "--cov=solarpy --cov-fail-under=1 --cov-report=term-missing --doctest-modules"
pythonpath = ["src"]
testpaths = ["tests", "src"]
